testdata/test/resources/com/yafred/asn1/test/should-fail/componentsof_undefined_type.asn
-- FAIL COMPONENTS OF: type undefined

Components-of1 DEFINITIONS  ::=
BEGIN

Seq1 ::= SEQUENCE {
   zero INTEGER,
   COMPONENTS OF Seq3,
   ...,
   [[ deux INTEGER ]]
}


END




